--- a/src/LeetCode.Application/LeetCode.Application.csproj
+++ b/src/LeetCode.Application/LeetCode.Application.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="FluentEmail.Core" Version="3.0.2" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LeetCode.Core\LeetCode.Core.csproj" />
+    <ProjectReference Include="..\LeetCode.Domain\LeetCode.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
