--- a/src/LeetCode.Api/LeetCode.Api.csproj
+++ b/src/LeetCode.Api/LeetCode.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentEmail.Core" Version="3.0.2" />
     <PackageReference Include="FluentEmail.Smtp" Version="3.0.2" />
+    <PackageReference Include="Google.Apis.Admin.Directory.directory_v1" Version="1.69.0.3799" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
       <PrivateAssets>all</PrivateAssets>
