--- a/src/LeetCode.Api/appsettings.Development.json
+++ b/src/LeetCode.Api/appsettings.Development.json
@@ -27,8 +27,8 @@
     },
 
     "Jwt": {
-        "Issuer": "http://EventSystem.uz",
-        "Audience": "EventSystem",
+        "Issuer": "http://LeetCodeDemo.uz",
+        "Audience": "LeetCodeDemo",
         "SecurityKey": "23f926fb-dcd2-49f4-8fe2-992aac18f08f",
         "Lifetime": 24
     }
