--- a/src/LeetCode.Api/appsettings.Development.json
+++ b/src/LeetCode.Api/appsettings.Development.json
@@ -23,7 +23,8 @@
 
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DatabaseConnection": "Server=DESKTOP-5FJLAO9;Database=LeetCode;User Id=sa;Password=1;TrustServerCertificate=True;"
+        "DatabaseConnectionMS": "Server=DESKTOP-5FJLAO9;Database=LeetCode;User Id=sa;Password=1;TrustServerCertificate=True;",
+        "DatabaseConnectionPS": "Host=localhost;Port=5432;Database=LeetCode1;Username=sa;Password=1;"
     },
 
     "Jwt": {
